# evaltrust

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
docs/: README.md  adapters.md  architecture.md  checks.md  configuration.md  design.md  input-formats.md  integrations.md  sample-md-report.md
src/evallab/audit/: repeatability.py  runner.py  statistical.py
src/evallab/core/: schema.py
src/evallab/stats/: agreement.py  effect.py
src/evaltrust/: __init__.py  api.py  cli.py  config.py  diff.py
src/evaltrust/adapters/: common.py  deepeval.py  generic.py  helm.py  inspect_ai.py  langfuse.py  mlflow_evaluate.py  openai_evals.py  openevals.py  registry.py
src/evaltrust/audit/: allpairs.py  benchmark_health.py  contamination.py  judge_calibration.py  judge_reliability.py  preference.py  repeatability.py  runner.py  single.py  statistical.py  (+2 more)
tests/: test_adapters.py  test_agreement.py  test_allpairs.py  test_api.py  test_benchmark_health.py  test_cli.py  test_config.py  test_contamination.py  test_effect.py  test_helm_adapter.py  test_ingest.py  test_judge_reliability.py  test_line_adapters.py  test_multiple.py  test_pairing.py  test_power.py  test_preference.py  test_repeatability.py  test_report_markdown.py  test_resampling.py  test_robustness.py  test_runner.py  test_schema.py  test_statistical.py  test_suite.py  test_suite_ingest.py  test_terminal.py  test_verdict.py
tests/fixtures/: helm_per_instance_stats.json  inspect_log.json  langfuse_scores_v3.json  mlflow_eval_results_table.json  openevals_sample.json
(+13 files in other folders)
